refactoring; starting the playground for long life learning

--- a/python/Detect.ipynb
+++ b/python/Detect.ipynb
@@ -24,16 +24,6 @@
    ],
    "source": [
     "# imports\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from keras.backend import tensorflow_backend\n",
-    "\n",
-    "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=.30)\n",
-    "sess = tf.Session(config=tf.ConfigProto(gpu_options=gpu_options))\n",
-    "tensorflow_backend.set_session(sess)\n",
-    "\n",
-    "\n",
-    "# keras\n",
     "from keras.models import Model\n",
     "from keras.layers import Input, concatenate, Conv2D, MaxPooling2D, Conv2DTranspose\n",
     "from keras.optimizers import Adam, SGD, Adagrad\n",
@@ -42,7 +32,12 @@
     "import keras.backend as K\n",
     "\n",
     "# weighted cross-entropy\n",
-    "from kerasFunctions import my_binary_crossentropy"
+    "from kerasFunctions import my_binary_crossentropy\n",
+    "\n",
+    "# GPU memory settings\n",
+    "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=.30)\n",
+    "sess = tf.Session(config=tf.ConfigProto(gpu_options=gpu_options))\n",
+    "tensorflow_backend.set_session(sess)"
    ]
   },
   {
@@ -140,24 +135,6 @@
     "    res = res/(upLim-loLim+0.0000001)\n",
     "    return res\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "dataset = np.random.rand(100,100,10)\n",
-    "upLim = np.percentile(dataset, 99.9)\n",
-    "loLim = np.percentile(dataset, 0.01)\n",
-    "res = np.maximum(dataset - loLim, 0)\n",
-    "res = np.minimum(res, upLim.astype(\"float64\"))\n",
-    "res = res/(upLim-loLim)\n"
    ]
   },
   {
