parser notebook for the new scope dataset

--- a/python/DetectionLifeLearningPlayground.ipynb
+++ b/python/DetectionLifeLearningPlayground.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'detection.normalization' from 'C:\\\\Users\\\\myersadmin\\\\soft\\\\SampleDetection\\\\python\\\\detection\\\\normalization.py'>"
+       "<module 'unet.modules.net' from 'C:\\\\Users\\\\myersadmin\\\\soft\\\\unet\\\\modules\\\\net.py'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,66 +21,117 @@
     "import numpy as np\n",
     "from importlib import reload\n",
     "\n",
-    "reload(detection.normalization)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import unet.modules.net\n",
     "\n",
-    "data = 2*np.random.rand(100,100,10)"
+    "# reload(detection.normalization)\n",
+    "reload(unet.modules.net)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.9999894333322557, 1.4987150230627577e-05)"
+       "['',\n",
+       " 'C:\\\\Users\\\\myersadmin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python35\\\\Lib',\n",
+       " 'C:\\\\Users\\\\myersadmin\\\\soft\\\\gans',\n",
+       " 'C:\\\\Users\\\\myersadmin\\\\soft',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\python35.zip',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\DLLs',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35',\n",
+       " 'C:\\\\Users\\\\myersadmin\\\\AppData\\\\Roaming\\\\Python\\\\Python35\\\\site-packages',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\tf_cnnvis-1.0.0-py3.5.egg',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\scikit_image-0.13.1-py3.5-win-amd64.egg',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\wget-3.2-py3.5.egg',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\pywavelets-0.5.2-py3.5-win-amd64.egg',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\networkx-2.0-py3.5.egg',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\decorator-4.1.2-py3.5.egg',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'c:\\\\users\\\\myersadmin\\\\appdata\\\\local\\\\programs\\\\python\\\\python35\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'C:\\\\Users\\\\myersadmin\\\\AppData\\\\Roaming\\\\Python\\\\Python35\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\cygwin64\\\\home\\\\myersadmin\\\\.ipython']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.max(), data.min()"
+    "import sys\n",
+    "sys.path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_,_,normData = normalizePercentile(data, saturate=False)"
+    "m = unet.modules.net.build_unet((None,None,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-5.8075974698768415e-05, 1.0008669639981063)"
+       "<keras.engine.training.Model at 0x13e6b7f0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normData.min(), normData.max()"
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.training.Model at 0x13e6b7f0>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.optimizers import Adam\n",
+    "from unet.modules.functions import my_binary_crossentropy\n",
+    "m.compile(optimizer=Adam(lr=0.001), loss=my_binary_crossentropy((1,1)), metrics=['accuracy'])"
    ]
   },
   {
